# evm_mlir

./: .gitignore  CODEOWNERS  Cargo.toml  Makefile  README.md  generated.ll  generated.mlir  generated.mlir.bak
.github/scripts/: run-benchmarks.sh
.github/workflows/: bench-hyperfine.yml  ci.yml
bench/revm_comparison/src/: evm_mlir_factorial.rs  evm_mlir_fibonacci.rs  lib.rs  revm_factorial.rs  revm_fibonacci.rs
scripts/: env-macos.sh
src/: builder.rs  codegen.rs  constants.rs  context.rs  db.rs  env.rs  executor.rs  journal.rs  lib.rs  main.rs  opcodes.rs  precompiles.rs  primitives.rs  program.rs  result.rs  state.rs  syscall.rs  utils.rs
src/codegen/: context.rs  mod.rs  module.rs  operations.rs  pass_manager.rs
tests/: ef_tests.rs  evm.rs  operations.rs  snailtracer.rs
tests/ef_tests_executor/: mod.rs  parser.rs
