[package]
name = "evm_mlir"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/lambdaclass/evm_mlir/"
readme = "README.md"
license = "LICENSE"
keywords = ["ethereum", "evm"]

[dependencies]
llvm-sys = "180.0.0"
melior = { version = "0.18.1", features = ["ods-dialects"] }
mlir-sys = "0.2.2"
num-bigint = "0.4.5"
tempfile = "3.10.1"
thiserror = "1.0.57"

[dev-dependencies]
rstest = "0.21.0"

[build-dependencies]
cc = "1.0.83"
