[workspace]
members = ["bench/revm_comparison"]

[package]
name = "evm_mlir"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/lambdaclass/evm_mlir/"
readme = "README.md"
license = "LICENSE"
keywords = ["ethereum", "evm"]

[dependencies]
llvm-sys = "180.0.0"
melior = { version = "0.18.1", features = ["ods-dialects"] }
mlir-sys = "0.2.2"
num-bigint = "0.4.5"
tempfile = "3.10.1"
thiserror = "1.0.57"
ethereum-types = "0.14.1"
bytes = { version = "1.6.0", features = ["serde"] }
sha3 = "0.10.8"

[dev-dependencies]
rstest = "0.21.0"
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = { version = "1.0.117" }
walkdir = "2.5.0"
datatest-stable = "0.2.9"
hex = "0.4.3"

[build-dependencies]
cc = "1.0.83"

[[test]]
name = "ef_tests"
path = "tests/ef_tests.rs"
harness = false
